[package]
name = "controller"
version = "6.7.2"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.32", features = ["full"] }
rand = "0.8"
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
hex = "0.4"
tower = "0.4"
tracing = "0.1"
tonic-reflection = "0.10"
tonic-web = "0.10"
statig = { version = "0.3", features = ["async"] }
flume = "0.11"
rayon = "1.8"
cfg-if = "1.0"
futures = "0.3"
indexmap = "2.1"

cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }

crypto_sm = { git = "https://github.com/cita-cloud/crypto_sm", package = "crypto", optional = true }
crypto_eth = { git = "https://github.com/cita-cloud/crypto_eth", package = "crypto", optional = true }

[build-dependencies]
tonic-build = "0.10"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1

[features]
default = ["sm"]
sm = ["crypto_sm"]
eth = ["crypto_eth"]
