[package]
name = "controller"
version = "6.7.3"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["full"] }
rand = "0.8"
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
hex = "0.4"
tower = "0.4"
tracing = "0.1"
tonic-reflection = "0.11"
tonic-web = "0.11"
statig = { version = "0.3", features = ["async"] }
flume = "0.11"
rayon = "1.8"
cfg-if = "1.0"
futures = "0.3"
indexmap = "2.2"

cloud-util = "=0.8.1-beta1"
cita_cloud_proto = "=6.7.3-beta1"

crypto_sm = { git = "https://github.com/cita-cloud/crypto_sm", package = "crypto", optional = true, branch = "v6.7.3-beta1" }
crypto_eth = { git = "https://github.com/cita-cloud/crypto_eth", package = "crypto", optional = true, branch = "v6.7.3-beta1" }

[build-dependencies]
tonic-build = "0.11"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1

[features]
default = ["sm"]
sm = ["crypto_sm"]
eth = ["crypto_eth"]
